[package]
name = "cachepadded"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "cache_benchmarks"
harness = false

[dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
rayon = "1.10.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
